# pm-bot

./: .dockerignore  .gitignore  DOCKER.md  DOCKER_GUIDE.md  DOCKER_SCRIPTS_SUMMARY.md  Dockerfile  MCP_ATLASSIAN_SSE_SETUP.md  MCP_ATLASSIAN_SSE_UPDATE_SUMMARY.md  QUICK_START_MINIMAL.md  QUICK_START_UV.md  README.md  UV_SETUP_SUCCESS.md  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  docker_compose_run.sh  env.example  environment.template.txt  main.py  pyproject.toml  quick_docker_start.sh  requirements.txt  run_docker.sh
config/: settings.py
core/: __init__.py  project_manager.py
instructions/: README.md  azure-openai-credentials.md  google-credentials.md  jira-credentials.md  slack-credentials.md
models/: __init__.py  epic.py  user_story.py
services/: __init__.py  google_meet_service.py  jira_service.py  openai_service.py  slack_service.py
tests/: test_project_manager.py
utils/: __init__.py  text_parser.py
